# Mergify-Technical-Test

./: README.md  main.py  pyproject.toml  requirements.txt
tests/: test_box.py  test_finder.py  test_stock.py  test_warehouse.py
warehouse/: box.py  finder.py  stock.py
