[tool.poetry]
name = "thewarehouse"
version = "0.1.0"
description = "Puzzle for mergify internship"
authors = ["GuillaumeO <7831777+GuillaumeOj@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.4.3"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
